[package]
name = "poly-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.8"
dotenv = "0.15.0"
url = "2.3.1"
async-trait = "0.1.64"

[dev-dependencies]
criterion = "0.3"
mockall = "0.11.3"

# [[bench]]
# name = "polygon_bench"
# harness = false